# network-interface

./: CMakeLists.txt
docs/: kdx packets.txt
old/src/: CMakeLists.txt  client.hpp  config.h.in  connection.hpp  owned_msg.hpp  server.hpp  tsqueue.hpp
old/src/_deprecated/: mysqlworker.hpp  sqliteworker.hpp
old/src/hl/: connection.hpp  file.hpp  io.hpp  news.hpp
old/src/kdx/: server.cpp  server.hpp
old/src/kdx/lib/: CMakeLists.txt
old/src/loe/: connection.hpp
old/src/palace/: dbworker.cpp  dbworker.hpp  server.cpp  server.hpp
old/src/palace/lib/: CMakeLists.txt  asset.hpp  codec.hpp  connection.hpp  message.cpp  protocol.hpp  session.cpp  session.hpp
old/test/: CMakeLists.txt  test_client.cpp  test_connection.hpp  test_server.hpp  test_server_main.cpp
old/test/kdx/: CMakeLists.txt
old/test/palace/: test_palace_msg_parse.cpp
res/: carracho.gdt  carrachoclient.dia  kdxclient.json  kdxserver.json  kdxtracker.json  manor.json  palace32.gdt
src/: CMakeLists.txt  blob.hpp  common.hpp  config.h.in  connection.hpp  dbworker.hpp  macros.h  mysqlworker.cpp  netqueue.hpp  netset.hpp  owned_message.hpp  packet.hpp  server.hpp  session.hpp  sqliteworker.cpp  tsdatabase.hpp  tsmysql.cpp  tsmysql.hpp  tsqueue.hpp  tssqlite.cpp  tssqlite.hpp
src/_3rdparty/: CMakeLists.txt
src/carracho/lib/: account.cpp  account.hpp
src/hl/: CMakeLists.txt  account.hpp  connection.hpp  file.hpp  hlaccount.cpp  hlaccount.hpp  hlcommon.hpp  hldatetime.hpp  hlfile.cpp  hlfile.hpp  hlnews.hpp  hlserver.cpp  hlserver.hpp  hlservertrackersession.hpp  hlsession.cpp  hlsession.hpp  hltransaction.cpp  hltransaction.hpp  hluseraccess.cpp  hluseraccess.hpp  hluserflags.cpp  hluserflags.hpp  hluserinfo.cpp  hluserinfo.hpp  hlutils.hpp  main.cpp  message.cpp  message.hpp  news.hpp  protocol.hpp
src/kdx/: codec.hpp  kdxcodec.cpp  kdxcodec.hpp  kdxthreadedcodec.cpp  kdxthreadedcodec.hpp  server.cpp  server.hpp
src/kdx/lib/: CMakeLists.txt  codec.cpp  codec.hpp  tscodec.cpp  tscodec.hpp
src/logging/: CMakeLists.txt  appender.cpp  appender.hpp  common.hpp  console_appender.cpp  console_appender.hpp  file_appender.cpp  file_appender.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  message.cpp  message.hpp
src/palace/: CMakeLists.txt  palace_blob.hpp  palace_codec.hpp  palace_message.hpp  palaceasset.hpp  palacecommon.hpp  palacemessage.hpp  palaceutils.hpp  server.cpp  server.hpp  test.cpp
src/palace/lib/: CMakeLists.txt  asset.cpp  asset.hpp  codec.cpp  connection.cpp  connection.hpp  message.hpp  protocol.cpp  protocol.hpp
src/sqlite/: prepared_result.cpp  prepared_result.hpp  result.cpp  result.hpp
src/test/: server_main.cpp  test_server.hpp
test/: CMakeLists.txt  build.sh  test_server.hpp  test_server_main.cpp
test/hl/: field_any_cast.cpp
test/kdx/: test_kdx_codec.cpp
test/logging/: test_log.cpp
